src/test/should-compile/function.se
def bar(a: bit<10>[10 bank 5]) {
  a[1] := 10;
}

decl x: bit<10>[10 bank 5];
bar(x);
