src/test/should-fail/combine.se
decl a: float[1056 bank 32];
decl c: float[1024 bank 32];

for (let i = 0..1024) unroll 32 {
  c[i] := a[i] + a[i+1];
}
